port to vala-0.48 and windows, cat symlinks

--- a/meson.build
+++ b/meson.build
@@ -13,13 +13,15 @@ xxhash_lib = meson.get_compiler('c').find_library('xxhash')
 xxhash_vapi = meson.get_compiler('vala').find_library('xxhash', dirs: meson.current_source_dir())
 xxhash_dep = declare_dependency(dependencies: [xxhash_lib, xxhash_vapi])
 
+stat_vapi = meson.get_compiler('vala').find_library('stat', dirs: meson.current_source_dir())
+
 posix_dep = meson.get_compiler('vala').find_library('posix')
 
 if get_option('btrfs')
 	btrfs_dep = meson.get_compiler('c').find_library('btrfs')
-	brzip = executable('brzip', 'brzip.gs', dependencies: [glib_dep, gobject_dep, brotli_dep, xxhash_dep, posix_dep, btrfs_dep], install: true)
+	brzip = executable('brzip', 'brzip.gs', dependencies: [glib_dep, gobject_dep, brotli_dep, xxhash_dep, stat_vapi, posix_dep, btrfs_dep], install: true)
 else
-	brzip = executable('brzip', 'brzip.gs', 'crc32c.c', dependencies: [glib_dep, gobject_dep, brotli_dep, xxhash_dep, posix_dep], install: true)
+	brzip = executable('brzip', 'brzip.gs', 'crc32c.c', dependencies: [glib_dep, gobject_dep, brotli_dep, xxhash_dep, stat_vapi, posix_dep], install: true)
 endif
 
 install_man('brzip.1')
